--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,13 @@ a {
   text-decoration: none;
 }
 
+input,
+textarea,
+button {
+  font-family: inherit;
+  line-height: inherit;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
@@ -528,4 +535,171 @@ img {
 }
 .footer-social-image {
   fill: #f4f4fd;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: none;
+  justify-content: center;
+  align-items: center;
+
+  background-color: rgba(46, 47, 66, 0.4);
+}
+.is-open {
+  display: flex;
+}
+.modal {
+  position: relative;
+  width: 408px;
+  padding: 72px 24px 24px;
+  border-radius: 4px;
+  background-color: #FCFCFC;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+}
+.modal-button-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 24px;
+  height: 24px;
+
+  background-color: #E7E9FC;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+
+  cursor: pointer;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button-close:hover {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  background-color: #404BBF;
+}
+
+
+.modal-button-icon {
+  fill: #2E2F42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-button-close:hover .modal-button-icon {
+  fill: #ffffff;
+}
+.contacts-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  gap: 8px;
+}
+.contacts-form-title {
+  margin-bottom: 16px;
+
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+}
+.contacts-form-label {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  width: 100%;
+
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+
+  color: #8e8f99;
+}
+.contacts-form-input {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  height: 40px;
+  padding: 11px 10px 11px 38px;
+}
+.contacts-form-textarea {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  padding: 8px 16px;
+}
+.contacts-form-icon {
+  position: absolute;
+  bottom: 14px;
+  left: 16px;
+  fill: #2E2F42;
+}
+.contacts-form-checkbox-label {
+  width: 100%;
+  margin-bottom: 24px;
+
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+
+.contacts-form-checkbox-label a {
+  text-decoration: underline;
+  color: #4D5AE5;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts-form-checkbox-label a:hover {
+  color: #404bbf;
+}
+
+.contacts-form-checkbox {
+  margin-right: 8px;
+}
+
+.contacts-form-label:focus-within .contacts-form-input,
+.contacts-form-label:focus-within .contacts-form-textarea {
+  outline: none;
+  border: 1px solid #4D5AE5;
+}
+
+.contacts-form-label:focus-within .contacts-form-icon {
+  fill: #4D5AE5;
+}
+
+.contacts-form-button {
+  min-width: 169px;
+  border-radius: 4px;
+  padding: 16px 32px;
+
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #ffffff;
+
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #4d5ae5;
+  cursor: pointer;
+
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1),
+              box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts-form-button:hover {
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  background: #404bbf;
+}
+.contacts-form-button:active {
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: #404bbf;
 }
