--- a/css/style.css
+++ b/css/style.css
@@ -668,9 +668,21 @@ img {
 }
 
 .contacts-form-textarea {
+  height: 120px;
+  resize: none;
+  padding: 8px 16px;
+
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
-  padding: 8px 16px;
+  background-color: transparent;
+  outline: transparent;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts-form-icon {
   position: absolute;
@@ -686,34 +698,60 @@ img {
   fill: #4D5AE5;
 }
 
+.contacts-form-checkbox-wrapper {
+  width: 100%;
+  margin-bottom: 24px;
+}
+
 .contacts-form-checkbox-label {
   width: 100%;
   margin-bottom: 24px;
 
-  font-weight: 400;
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
 }
 
-.contacts-form-checkbox-label a {
+
+.contacts-form-checkbox-label a:hover {
+
+}
+
+.contacts-form-checkbox {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  fill: transparent;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contacts-form-checkbox-hidden:checked .contacts-form-checkbox {
+  background-color: #404bbf;
+  border: none;
+  fill: #F4F4FD;
+}
+
+.contacts-form-link {
   text-decoration: underline;
   color: #4d5ae5;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.contacts-form-checkbox-label a:hover {
+.contacts-form-link:hover {
   color: #404bbf;
-}
-
-.contacts-form-checkbox {
-  margin-right: 8px;
 }
 
 .contacts-form-button {
   min-width: 169px;
+  height: 56px;
   border-radius: 4px;
   padding: 16px 32px;
 
@@ -724,17 +762,18 @@ img {
   color: #ffffff;
 
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background: #4d5ae5;
+  border: none;
+  background-color: #4d5ae5;
   cursor: pointer;
 
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-form-button:hover {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  background: #404bbf;
+  background-color: #404bbf;
 }
 .contacts-form-button:active {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
