--- a/css/style.css
+++ b/css/style.css
@@ -665,11 +665,13 @@ img {
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   background-color: #404bbf;
   border: none;
+  outline: none;
   fill: #ffffff;
 }
 .modal-button-close:focus {
   background-color: #404bbf;
   border: none;
+  outline: none;
   fill: #ffffff;
 }
 
@@ -677,7 +679,8 @@ img {
   fill: #2e2f42;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-button-close:hover .modal-button-icon {
+.modal-button-close:hover .modal-button-icon,
+.modal-button-close:focus .modal-button-icon {
   fill: #ffffff;
 }
 .contacts-form {
